支持多分类选择